# hello_rasterization

./: Cargo.toml
src/: app.rs  lib.rs  main.rs
src/engine/: transform.rs
src/io/: color.rs  image.rs  mod.rs  model.rs
src/render/: camera.rs  math.rs  mod.rs  rasterization.rs  shader.rs  texture_2d.rs
src/ui/: ui_image.rs
