[package]
name = "hello_graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
colored = "2.0.0"
eframe = { version = "0.21.3", features = ["ron","persistence"] }
egui = "0.21.0"
nalgebra = "0.32.2"
obj-rs = "0.7.1"
png = "0.17.8"
serde = { version = "1", features = ["derive"] }
